--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="eisenhower-matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" class="matrix-img">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-page-element">
       <p id="add-elem-to-list-sec">
-        <label for="new-task">Add Item</label>
+        <label class="normal-label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task"class="input-field task" type="text">
+          <button class="push-button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="list-name">Todo</h3>
+      <ul id="incomplete-tasks" class="task-list">
+        <li class="list-elem">
+          <input class="input-field" type="checkbox">
+          <label class="normal-label task">Pay Bills</label>
+          <input type="text" class="input-field task">
+          <button class="push-button edit">Edit</button>
+          <button class="push-button delete">
+            <img class="delete-img" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="edit-mode list-elem">
+          <input type="checkbox" class="input-field">
+          <label class="normal-label task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="input-field task">
+          <button class="push-button edit">Save</button>
+          <button class="push-button delete">
+            <img class="delete-img" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="list-name">Completed</h3>
+      <ul id="completed-tasks" class="task-list">
+        <li class="list-elem">
+          <input type="checkbox" class="input-field" checked>
+          <label class="normal-label task">See the Doctor</label>
+          <input type="text" class="input-field task">
+          <button class="push-button edit">Edit</button>
+          <button class="push-button delete">
+            <img class="delete-img" src="./remove.svg">
           </button>
         </li>
       </ul>
