refactor (extended-1.2): add alt text for multimedia

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <div class="eisenhower-matrix">
-      <img src="./eisenhower-matrix.jpg" class="matrix-img">
+      <img src="./eisenhower-matrix.jpg" class="matrix-img" alt="Eisenhower matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-page-element">
@@ -26,7 +26,7 @@
           <input type="text" class="input-field task">
           <button class="push-button edit">Edit</button>
           <button class="push-button delete">
-            <img class="delete-img" src="./remove.svg">
+            <img class="delete-img" src="./remove.svg" alt="Backspace image">
           </button>
         </li>
         <li class="edit-mode list-elem">
@@ -35,7 +35,7 @@
           <input type="text" value="Go Shopping" class="input-field task">
           <button class="push-button edit">Save</button>
           <button class="push-button delete">
-            <img class="delete-img" src="./remove.svg">
+            <img class="delete-img" src="./remove.svg" alt="Backspace image">
           </button>
         </li>
       </ul>
@@ -47,7 +47,7 @@
           <input type="text" class="input-field task">
           <button class="push-button edit">Edit</button>
           <button class="push-button delete">
-            <img class="delete-img" src="./remove.svg">
+            <img class="delete-img" src="./remove.svg" alt="Backspace image">
           </button>
         </li>
       </ul>
